--- a/modules/ROOT/pages/conf-examples/search/configure-search.adoc
+++ b/modules/ROOT/pages/conf-examples/search/configure-search.adoc
@@ -3,7 +3,7 @@
 :toclevels: 3
 :description: This document gives some guidance and notes about how to configure the search service.
 
-:tika-version: 2.7.0
+:tika-version: 3.2.0
 :configure-tika-url: https://tika.apache.org/{tika-version}/configuring.html
 
 == Introduction
@@ -21,51 +21,15 @@ With basic search, only metadata is indexed. Content can be searched when config
 
 Depending on the configuration, space requirements can differ. 
 
-Indexing is a non-blocking operation. It is triggered by various events (see xref:{s-path}/search.adoc#state-changes-which-trigger-indexing[State Changes which Trigger Indexing]) and does not prevent file access by users. While indexing metadata is more or less instantaneous, extracting and indexing content can take some time depending on the setup and size of the document.
-
 == General Considerations
 
 === Space Requirements
 
-There is no definitive answer as to how much space needs to be provided for storing the index or how it can be calculated. The only valid answer to that question is - it depends and and you need to monitor it. Note that monitoring is not part of this document.
+See the xref:{s-path}/search.adoc#space-requiremen[Space Requiremen] for more details.
 
-Here are some notes to give some guidance:
+=== Index Management
 
-* Extracting and indexing metadata consumes only little space compared to a content index, though it can be significant in an environment with a lot of files and limited filesystem space.
-* When extracting and indexing content, the range for the consumed index can be - as rule of thumb - between 50-200% of saved documents containing text. Being conservative and taking a value of 150%, having 3TB of documents where text based data can be extracted, would require up to 4.5TB - only for the content index.
-
-IMPORTANT: Having the index on the default location unmonitored, filling up the filesystem by the index can happen silently and make Infinite Scale unresponsive. As the OS, Infinite Scale and its data share the same filesystem, recovery can be a task taking considerable downtime.
-
-=== Index Location and Scaling
-
-* The location of the search index can be customized and should be on a fast backend.
-* Consider separate hardware for the search service if response time is critical for your environment, as xref:deployment/services/deployment-considerations.adoc#scaling-of-services[scaling] is currently not possible for the search service.
-** Content extraction can consume considerable CPU and memory ressources and naturally competes with all other services if running on the same hardware. It has to extract every document and index it before it is available for searching.
-* The search index can be manually relocated and search reconfigured to use the new path.
-
-=== Reloacting the Index
-
-If it becomes necessary to relocate the index, you need to:
-
-* Shut down the Infinite Scale instance. +
-This is necessary to avoid changes that miss triggering an index update.
-* Move the contents referenced via `SEARCH_ENGINE_BLEVE_DATA_PATH` to a new location.
-* Define the new location in `SEARCH_ENGINE_BLEVE_DATA_PATH`.
-* Restart the Infinite Scale instance.
-* Update your xref:maintenance/b-r/backup.adoc[backup]/xref:maintenance/b-r/restore.adoc[restore] plan and setup accordingly.
-
-=== Index Maintenance
-
-==== Recreating an Index
-
-It can happen that an index needs to be recreated. Currently this can only be done on a per space basis. Use the following command for this task:
-
-[source,bash]
-----
-ocis search index --space $SPACE_ID --user $USER_ID
-----
-
-Note that not names but IDs are necessary and that the specified user ID needs access to the space to be indexed.
+See the xref:{s-path}/search.adoc#index-management[Index Management] for more details.
  
 == Content Extraction and Indexing
 
@@ -73,7 +37,7 @@ To search for content, a content extraction engine needs to be installed and con
 
 === Tika Extractor
 
-Though you can compile Tika manually on your system by following the https://tika.apache.org/{tika-version}/gettingstarted.html[Getting Started with Apache Tika] guide (newer Tika versions may be available) or download a precompiled https://tika.apache.org/download.html[Tika server], you can also run Tika using a https://hub.docker.com/r/apache/tika[Tika container]. Note that at the time of writing, containers are only available for the `amd64` platform. The xref:depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc[Local Production Setup] deployment example is based on this container and is ready to use.
+Though you can compile Tika manually on your system by following the https://tika.apache.org/{tika-version}/gettingstarted.html[Getting Started with Apache Tika] guide (newer Tika versions may be available) or download a precompiled https://tika.apache.org/download.html[Tika server], you can also run Tika using a https://hub.docker.com/r/apache/tika[Tika container]. The xref:depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc[Local Production Setup] deployment example is based on this container and is ready to use.
 
 ==== Prerequisites
 
@@ -83,13 +47,12 @@ The following describes how to make Tika available for your environment.
 
 As prerequisite, Tika needs to be accessible via `\http://your-server:9998` either using the manual installation or via docker. You can decide to let Tika run on the same or a separate server from where the search service runs. The following configuration assumes that all Infinite Scale services including the search service and Tika run on the same hardware.
 
-These configuration parameters need to be set for the use of Tika:
- 
-* `SEARCH_EXTRACTOR_TYPE=tika`
-* `SEARCH_EXTRACTOR_TIKA_TIKA_URL=http://your-server:9998`
-
-The parameters can either be set via environment variables or as part of a `yaml` configuration file. Also see the xref:depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc[Local Production Setup] deployment example in the downloaded `ocis-wopi` example directory for an example which also downloads the necessary Tika image.
+The necessary environment variables to be set are described at the xref:{s-path}/search.adoc#tika-extractor[Tika Extractor] documentation.
 
 ==== Configuring Tika
 
 Though in the majority of cases not necessary, components of Tika can be configured if required by providing an xml file with necessary data. For more information see {configure-tika-url}[Configuring Tika] on their web page.
+
+=== Scaling Tika
+
+Tika can be scaled and usually a loadbalancer is needed to distribute access to the Tika instances. This document does not cover how to do so. 
