--- a/modules/ROOT/pages/migration/upgrading-ocis.adoc
+++ b/modules/ROOT/pages/migration/upgrading-ocis.adoc
@@ -19,6 +19,20 @@ IMPORTANT: When upgrading from an older release to the desired one, *ALL* upgrad
 
 IMPORTANT: When upgrading from an older release to the desired one, mandatory configuration settings may have been added or removed. To see the changes required, you can run `ocis init --diff` after upgrading but before finally starting. For more details, see the xref:deployment/general/ocis-init.adoc[ocis init command] description.
 
+== Version 7.1.0 to 7.2.0
+
+=== Notable Changes Requiring Manual Intervention
+
+There are no notable changes requiring manual intervention in Infinite Scale 7.2
+
+=== Breaking Changes Requiring Manual Intervention
+
+There are no breaking changes in Infinite Scale 7.2
+
+=== Upgrade Steps
+
+For a detailed description of the steps to upgrade, see the xref:migration/upgrading_7.1.0_7.2.0.adoc[Upgrading from 7.1.0 to 7.2.0] documentation. Note that this document also contains references to added/changed/removed CLI commands and environment variables.
+
 == Version 7.0.0 to 7.1.0
 
 === Notable Changes Requiring Manual Intervention
