updates and cleanup

--- a/modules/ROOT/pages/deployment/services/s-list/policies.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/policies.adoc
@@ -164,9 +164,9 @@ The policies service contains a set of preconfigured example policies. See the d
 {service_tab_text}::
 +
 --
-{compose_url}{compose_url_component}{compose_final_path}[Rego policies deployment examples directory,window=_blank]
+{compose_url}{ocis_repo_url_component}{compose_final_path}[Rego policies deployment examples directory,window=_blank]
 
-Using git version name: `{compose_url_component}`
+Using git branch name: `{ocis_repo_url_component}`
 --
 ====
 
