--- a/modules/ROOT/pages/deployment/wopi/wopi.adoc
+++ b/modules/ROOT/pages/deployment/wopi/wopi.adoc
@@ -73,9 +73,9 @@ image::deployment/wopi/wopi-overview.svg[WOPI Overview Diagram,width=500]
 {service_tab_text}::
 +
 --
-{compose_url}{compose_url_component}{compose_final_path}/{ocis_wopi}[Docker compose `ocis_full` deployment examples directory,window=_blank]
+{compose_url}{ocis_repo_url_component}{compose_final_path}/{ocis_wopi}[Docker compose `ocis_full` deployment examples directory,window=_blank]
 
-Using git version name: `{compose_url_component}`
+Using git branch name: `{ocis_repo_url_component}`
 --
 ====
 
