--- a/modules/ROOT/partials/multi-location/tab-text.adoc
+++ b/modules/ROOT/partials/multi-location/tab-text.adoc
@@ -6,6 +6,9 @@ or it is the value of the name as defined in antora.yml
 // compute the correct tab text
 :tab_text: {service_tab_text}
 
+////
+// we do not make rolling releases anymore, keeping the code if that changes
 ifeval::["{service_tab_text}" == "master"]
 :tab_text: {service_tab_text} + Rolling {ocis-rolling-version}
 endif::[]
+////
