[7.2] [PR 1181] Fix storage-users command for resume non virus infected
Backport of PR #1181

--- a/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
@@ -199,7 +199,7 @@ ocis storage-users uploads sessions \
 [source,bash]
 ----
 ocis storage-users uploads sessions \
-     --processing=false \
+     --processing=true \
      --has-virus=false \
      --resume
 ----
