--- a/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
@@ -188,7 +188,7 @@ ocis storage-users uploads sessions \
 [source,bash]
 ----
 ocis storage-users uploads sessions \
-     --processing=false \
+     --processing=true \
      --has-virus=false \
      --resume
 ----
