--- a/modules/ROOT/pages/maintenance/commands/move-stuck-uploads.adoc
+++ b/modules/ROOT/pages/maintenance/commands/move-stuck-uploads.adoc
@@ -1,6 +1,6 @@
 = Move Stuck Uploads
 
-In some cases of saturated disk usage, Infinite Scale metadata may become stuck. This can occur when a file is being moved to its final destination after being uploaded. This issue was primarily seen with shares, where uploaded files could not be accessed. The required filename parameter aligns with Infinite Scale's internal processes and is used to complete the formerly stuck move action.
+In some cases of saturated disk usage, Infinite Scale metadata may become stuck. This can occur when file metadata is being moved to its final destination after file operations. This issue was primarily seen with shares, where uploaded files could not be accessed. The required filename parameter aligns with Infinite Scale's internal processes and is used to complete the formerly stuck move action.
 
 [source,bash]
 ----
